<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="loading">Waiting for sync&#8230;</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_search">Search</string>
    <string name="description_recipe_list_item_image">Recipe Image</string>
    <string name="description_nom">Nom!</string>
    <string name="description_comment">Comment on this recipe</string>
    <string name="description_share">Share this recipe</string>
    <string name="description_add">Add</string>
    <string name="description_remove">Remove</string>
    <string name="description_edit">Edit</string>
    <string name="create_group_ingredients">Ingredients</string>
    <string name="create_group_instructions">Instructions</string>
    <string name="dialog_create_title">How do you want to create your recipe?</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="create">Create!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string-array name="drawer_items">
        <item>Home</item>
        <!-- <item>My Recipes</item>  -->
        <item>About</item>
        <item>Logout</item>
    </string-array>

    <string-array name="home_filters_list">
        <item>Latest</item>
        <item>Top Recipes</item>
    </string-array>

    <string-array name="dialog_create_actions">
        <item>Take photo</item>
        <item>Choose an existing photo</item>
    </string-array>
    
    <item name="TAG_GROUP" type="id"/>
    <item name="TAG_INDEX" type="id"/>
    <string name="about_text">nom! was created by Eric Ouyang, Fred Widjaja, and Michael Hwang for their CS50 Final Project.</string>

</resources>
