<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/description_refresh"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/description_search"/>
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/description_add"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>