<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/menu_nom" 
        android:showAsAction="always" 
        android:orderInCategory="1" 
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/description_nom" >
        
    </item>
    
    <item android:id="@+id/menu_comment" 
        android:showAsAction="always" 
        android:orderInCategory="2" 
        android:icon="@drawable/ic_action_chat"
        android:title="@string/description_comment" >
        
    </item>
    
    <item android:id="@+id/menu_share" 
        android:showAsAction="always" 
        android:orderInCategory="3" 
        android:title="@string/description_share" 
        android:icon="@drawable/ic_action_share"
        android:actionProviderClass=
                "android.widget.ShareActionProvider" >
        
    </item>
    
</menu>